--- a/main.html
+++ b/main.html
@@ -10,7 +10,37 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div>
+		<img src="resume photo.jpg"height="200"width="200">
+		<h1>Ranjit Pote</h1>
+		
+	</div>
 
+	    <label for="Linked in: ">linkedin:</label>
+		<a href=https://www.linkedin.com/in/ranjit-pote-99906822b?midSig=3XWCzmDuLq-Gw1&eid=fyazr9-lbor5n5w-1f&midToken=AQGJSei4QJedQA&trkEmail=eml-jobs_jymbii_digest-header-0-profile_glimmer-null-fyazr9%7Elbor5n5w%7E1f-null-null&lipi=urn%3Ali%3Apage%3Aemail_jobs_jymbii_digest%3B4OM5DV%2F2QI%2BUuQoNDECDMg%3D%3D&trk=eml-jobs_jymbii_digest-header-0-profile_glimmer&originalSubdomain=in> Linkedin Profile</a>
+
+		<section id="skills">
+			<h4>Skills : </h4>
+			<ol>
+				<li>DSA</li>
+				<li>MYSQL</li>
+				<li>OOPs</li>
+				<li>DBMS</li>
+				<li>HTML</li>
+				<li>CSS</li>
+			</ol>
+		</section>
+
+
+		<section id="projects">
+			<h4>Name of projects : </h4>
+			<ul>
+				<li>Student result management system</li>
+				<li>tic-tac-toe</li>
+				<li>Sudoku-solver</li>
+			</ul>
+
+		</section>
 </body>
 
 </html>
